<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about_actionbar">About Stori</string>
    <string name="about_title1">Stori</string>
    <string name="about_title2">Every Stori tells a picture!</string>
    <string name="app_name">Stori</string>
    <string name="cancel_text">Cancel</string>
    <string name="copyright">Version %1$s (%2$d)\n\nBuild %3$s\n\nTips and help at http://stori-app.com\n\nCopyright \u00a9 2013-2014 Hyperfine Software Corp. http://hyperfine.com</string>
    <string name="default_stori_title">My Stori</string>
    <string name="default_stori_description">My Stori slides</string>
    <string name="delete_dialog_title">Deleting...</string>
    <string name="download_dialog_message">Downloading...</string>
    <string name="download_dialog_message_format">Downloading %1$d of %2$d...</string>
    <string name="download_errordialog_title">Download failed</string>
    <string name="download_errordialog_message">Failed to download the files necessary for viewing this Stori show</string>
    <string name="editplay_actionbar_format">%1$d of %2$d - %3$s</string>
    <string name="editplay_copydialog_title">Copying...</string>
    <string name="editplay_entertext_title">Stori text</string>
    <string name="editplay_entertext_hint">Enter text for this slide</string>
    <string name="editplay_maxpublishedexceeded_title">Cannot publish</string>
    <string name="editplay_maxpublishedexceeded_message_format">You have exceeded your allotment of %1$s published Storis. Please delete one or more in order to publish this Stori.</string>
    <string name="editplay_nopicture_text">Choose a picture!</string>
    <string name="editplay_overwriteaudio_title">Replace audio?</string>
    <string name="editplay_overwriteaudio_message">Do you want to replace the audio you have already recorded for this slide?</string>
    <string name="googlelogin_wait_message">Signing in...</string>
    <string name="google_play_market_link">https://play.google.com/store/apps/details?id=com.stori.stori</string>
    <string name="hello_world">Hello world!</string>
    <string name="list_no_items">No Storis found</string>
    <string name="main_create_alert_title">Create new?</string>
    <string name="main_create_alert_message">If you have not yet published your previous work, it will be lost.</string>
    <string name="main_create_button">Create new</string>
    <string name="main_edit_button_format">Edit %1$s</string>
    <string name="main_new_title_title">Stori Title</string>
    <string name="main_new_title_hint">Enter your new Stori title</string>
    <string name="main_preview_button_format">Preview %1$s</string>
    <string name="main_publish_button_format">Publish %1$s</string>
    <string name="main_share_button_format">Share %1$s</string>
    <string name="menu_editplayactivity_createnew">Create new</string>
    <string name="menu_editplayactivity_play_format">View %1$s</string>
    <string name="menu_editplayactivity_preview">Preview</string>
    <string name="menu_editplayactivity_publish">Publish</string>
    <string name="menu_editplayactivity_rename">Rename</string>
    <string name="menu_editplayactivity_settings">Settings</string>
    <string name="menu_editplayactivity_share">Share</string>
    <string name="menu_editplayactivity_viewpublished">List my Storis</string>
    <string name="menu_editplay_edit_reorder">Reorder</string>
    <string name="menu_editplay_edit_text">Text</string>
    <string name="menu_editplay_image_choosepicture">Choose picture</string>
    <string name="menu_editplay_image_replacecamera">Replace with camera</string>
    <string name="menu_editplay_image_replacepicture">Replace picture</string>
    <string name="menu_editplay_image_usecamera">Use camera</string>
    <string name="menu_editplay_trash_deleteslide">Remove slide</string>
    <string name="menu_editplay_trash_deleteimage">Remove image</string>
    <string name="menu_editplay_trash_deleteaudio">Remove audio</string>
    <string name="menu_playslidesactivity_savephoto">Save this photo</string>
    <string name="menu_playslidesactivity_saveallphotos">Save all photos</string>
    <string name="menu_playslidesactivity_settings">Settings</string>
    <string name="menu_storilistitem_play">Play</string>
    <string name="menu_storilistitem_edit">Edit</string>
    <string name="menu_storilistitem_share">Share</string>
    <string name="menu_storilistitem_delete">Delete</string>
    <string name="publish_dialog_title">Publish</string>
    <string name="publish_dialog_message">Ok to publish?</string>
    <string name="reorder_dialog_title">Reorder slide</string>
    <string name="reorder_dialog_text_format">Set the position of slide %1$d to:</string>
    <string name="settings_actionbar">Settings</string>
    <string name="settings_autoaudio_title">Play audio automatically</string>
    <string name="settings_autoaudio_summary">Play audio when a picture is brought into view during preview or play back</string>
    <string name="settings_buildstring_format">Build: %1$s</string>
    <string name="settings_switchaccount">Switch account</string>
    <string name="settings_currentaccount_format">Current: %1$s</string>
    <string name="share_dialog_title">Share this show</string>
    <string name="share_email_body_format">I want to share a %1$s with you! To view \"%2$s\", click on %3$s or paste the address into your browser.\n\n\"Every Stori tells a picture!\"\n\nGet the Stori app at http://stori-app.com</string>
    <string name="share_email_subject_format">You have a new %1$s to view: \"%2$s\"</string>
    <string name="slide_position_format">%1$d of %2$d</string>
    <string name="storilistactivity_actionbar">My Storis</string>
    <string name="storilistactivity_delete_title">Delete this Stori?</string>
    <string name="storilistactivity_delete_message">This will permanently delete this Stori. Deleting cannot be undone.</string>
    <string name="storilistactivity_delete_button">Delete this Stori</string>
    <string name="storilistactivity_downloadedit_title">Download for edit</string>
    <string name="storilistactivity_downloadedit_message">If you have not yet published your previous work, it will be lost.</string>
    <string name="storilistadapter_count_text_format">%1$s slides</string>
    <string name="storilistadapter_count_text_single">1 slide</string>
    <string name="switch_account_dialog_title">Switch account?</string>
    <string name="switch_account_dialog_message">If you switch your account, you will lose any unpublished changes to your current work. Continue?</string>
    <string name="toast_addslide_format">Added slide. Now viewing %1$d of %2$d.</string>
    <string name="toast_deleteslide_format">Removed slide. Now viewing %1$d of %2$d.</string>
    <string name="toast_reorderslide_format">Reordered slides. Now viewing %1$d of %2$d.</string>
    <string name="upload_dialog_title">Uploading...</string>
    <string name="upload_dialog_complete_title">Upload complete</string>
    <string name="upload_dialog_complete_message_format">Do you want to share this Stori?</string>
    <string name="upload_dialog_failure_title">Upload unsuccessful</string>
    <string name="upload_dialog_failure_message_format">Upload failed: %s</string>

    <string name="ok_text">Ok</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="default_text">Use default</string>
    <string name="set_text">Set</string>

    <!-- Everything below here should NOT be translated -->
    <string name="PREFS">stori</string>
    <string name="PREFS_EDITPROJECTNAME">prefs_editprojectname</string>
    <string name="PREFS_PLAYSLIDESNAME">prefs_playslidesname</string>
    <string name="PREFS_PLAYSLIDESAUTOAUDIO">prefs_playslidesautoaudio</string>

    <string name="DEFAULT_EDITPROJECTNAME"></string>
    <string name="DEFAULT_PLAYSLIDESNAME"></string>
    <string name="DEFAULT_PLAYSLIDESAUTOAUDIO">false</string>

</resources>
