<?xml version="1.0" encoding="utf-8"?>

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_weight="1">
	
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="20dp"
		android:paddingRight="20dp"
		android:paddingTop="20dp">
	
		<TextView
			android:id="@+id/about_title_textview"			
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/about_title1"
            style="@style/text_main_title"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="1dp"
			android:text="@string/about_title2"
            style="@style/text_main_subtitle"/>
			
		<!--  Separator -->
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_marginTop="25dp"
			android:layout_marginBottom="25dp"
			android:layout_height="1dp"
			android:background="#404040">
		</RelativeLayout>		
			
		<TextView
			android:id="@+id/about_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autoLink="web"
			android:text="@string/copyright"
			android:textSize="14dp"
			android:textColor="@color/text_subtitle"
			android:textColorLink="#8080B0"/>
			
	</LinearLayout>

</ScrollView>

