<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Auto play panel -->
    <LinearLayout
        android:id="@+id/settings_autoplay_panel"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="13dp"
        android:background="@drawable/button_flash"
        android:clickable="true"
        android:addStatesFromChildren="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight=".9">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/settings_autoaudio_title"
                style="@style/text_settings.title"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="false"
                android:text="@string/settings_autoaudio_summary"
                style="@style/text_settings.subtitle" />
        </LinearLayout>
        <CheckBox
            android:id="@+id/settings_autoaudio_checkbox"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <!--Separator -->
    <RelativeLayout
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#505050" />

    <!-- About panel -->
    <RelativeLayout
        android:id="@+id/settings_account_panel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="13dp"
        android:background="@drawable/button_flash"
        android:clickable="true"
        android:addStatesFromChildren="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/settings_switchaccount"
                style="@style/text_settings.title"/>
            <TextView
                android:id="@+id/settings_current_account_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/settings_currentaccount_format"
                style="@style/text_settings.subtitle" />
        </LinearLayout>
    </RelativeLayout>

    <!--Separator -->
    <RelativeLayout
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#505050" />

    <!-- About panel -->
    <RelativeLayout
        android:id="@+id/settings_about_panel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="13dp"
        android:background="@drawable/button_flash"
        android:clickable="true"
        android:addStatesFromChildren="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/about_actionbar"
                style="@style/text_settings.title"/>
            <TextView
                android:id="@+id/settings_buildstring_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/settings_buildstring_format"
                style="@style/text_settings.subtitle" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>